--- a/app/globals.css
+++ b/app/globals.css
@@ -2,5 +2,5 @@ html, body{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    background-color: #003049;
+    background-color: #0A0E27;
 } 
